@@ -10,6 +10,8 @@ Features added
 Bugs fixed
 ----------
 
+* #3246: xapian search adapter crashes
+
 Release 1.5.1 (released Dec 13, 2016)
 =====================================
 
